syntax = "proto3";

package redactive.grpc.v1;

import "google/protobuf/timestamp.proto";

message ChunkMetadata {
    // Chunk content's creation timestamp
    optional google.protobuf.Timestamp created_at = 1;
    // Chunk content's last modified timestamp
    optional google.protobuf.Timestamp modified_at = 2;
    optional string link = 3;
}

message SourceReference {
    // Source system of the document e.g. confluence, slack, local_file_system
    string system = 1;
    // Version of the source system e.g. 1.0.0
    string system_version = 2;
    // Connection id to the source system e.g. confluence space id, slack channel id, local file hostname
    string connection_id = 3;
    // Document id in the source system e.g. confluence page id, slack message id, local file path
    string document_id = 4;
    // Document version in the source system e.g. confluence page version, slack message version, local file version hash
    string document_version = 5;
    // Document path in the source system e.g. "My Drive/document.txt", "slack-channel-name"
    optional string document_path = 6;
}

message ChunkReference {
    // Chunking version e.g. 1.0.0
    string chunking_version = 1;
    // chunk id is unique within the document, but not globally unique, it's actually the index of the chunk in the document
    string chunk_id = 2;
    // SHA256 hash of the chunk body
    string chunk_hash = 3;
}

// A chunk is a part of a document
message RelevantChunk {
    message Relevance {
        // Similarity score of the chunk
        float similarity_score = 1;
    }

    // Source reference of the document
    SourceReference source = 1;
    // Chunk reference of the chunk
    ChunkReference chunk = 2;
    // Relevance of the chunk
    Relevance relevance = 3;
    // Chunk body
    string chunk_body = 4;
    // Document metadata
    ChunkMetadata document_metadata = 5;
}
